--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /cv/
+    url: /http://litonglinguistics.github.io/files/Li Tong-Current CV.pdf/
     
   - title: "Publications"
     url: /publications/
