--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 
+minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Tong Li / 李彤"
