--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "litonglinguistics/litonglinguistics.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "PROFILE3.png"
+  avatar           : "PROFILE.png"
   name             : "Tong Li"
   pronouns         : # example: "she/her"  
   bio              : "Incoming PhD Student"
