--- a/_config.yml
+++ b/_config.yml
@@ -244,6 +244,17 @@ defaults:
       author_profile: true
       share: true
       comments: true
+
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true    
+      
   # _publications
   - scope:
       path: ""
