--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /talks/    
 
   - title: "Projects"
-    url: /Projects/
+    url: /projects/
         
   - title: "Blog Posts"
     url: /year-archive/
