--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Incoming PhD Student"
   location         : "China"
-  employer         : 
+  employer         : Tianjin University
   uri              : # URL
   email            : "litong_lt@tju.edu.cn" 
 
@@ -37,7 +37,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : 
   impactstory      : # URL
-  orcid            : 
+  orcid            : https://orcid.org/0009-0002-1174-4673
   pubmed           : 
   researchgate     : # URL
 
