--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD candidate"
   location         : "China"
-  employer         : Hong Kong Polytechnic University
+  employer         : Hong Kong PolyU
   uri              : # URL
   email            : "tongtanya.li@connect.polyu.hk, litong_lt@tju.edu.cn" 
 
