--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : https://scholar.google.com.hk/citations?hl=zh-CN&user=ZxNMzfUAAAAJ&view_op=list_works&sortby=pubdate
   impactstory      : # URL
-  orcid            : https://orcid.org/0009-0002-1174-4673
+  orcid            : # https://orcid.org/0009-0002-1174-4673
   pubmed           : 
   researchgate     : https://www.researchgate.net/profile/Tong_Li168
 
