--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   avatar           : "PROFILE.jpg"
   name             : "Tong Li"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate"
+  bio              : "PhD student"
   location         : "China"
   employer         : Hong Kong PolyU
   uri              : # URL
